force-app/main/default/objects/ABFL_Payment_Link__mdt/ABFL_Payment_Link__mdt.object-meta.xml
<CustomObject>
    <label>ABFL Payment Link</label>
    <pluralLabel>ABFL Payment Links</pluralLabel>
</CustomObject>