force-app/main/default/objects/ABFL_Payment_Link__mdt/fields/ABFL_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>ABFL_Due_Date__c</fullName>
    <defaultValue>TODAY() + 7</defaultValue>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>