force-app/main/default/objects/ABFL_Payment_Link__mdt/fields/ABFL_Expiry_Period__c.field-meta.xml
<CustomField>
    <fullName>ABFL_Expiry_Period__c</fullName>
    <defaultValue>168</defaultValue>
    <label>Expiry Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>