force-app/main/default/objects/ABFL_Payment_Link__mdt/fields/ABFL_Send_Notification__c.field-meta.xml
<CustomField>
    <fullName>ABFL_Send_Notification__c</fullName>
    <defaultValue>&quot;NO&quot;</defaultValue>
    <label>Send Notification</label>
    <length>10</length>
    <type>Text</type>
</CustomField>